--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@types/googlemaps": "^3.43.3",
+    "@types/leaflet": "^1.9.8",
+    "apiip.net": "^1.3.0",
+    "ipify": "^6.0.0",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
